<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="question"
            type="com.amrwalidi.android.fancup.domain.Question" />

        <variable
            name="viewModel"
            type="com.amrwalidi.android.fancup.viewmodel.GameLevelViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="bottom"
            app:layout_constraintBottom_toTopOf="@+id/game_level_container"
            app:layout_constraintEnd_toEndOf="@+id/game_level_container"
            app:layout_constraintStart_toStartOf="@+id/game_level_container"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/first_level_star"
                tools:srcCompat="@drawable/filled_level_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/second_level_star"
                tools:srcCompat="@drawable/filled_level_star" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/third_level_star"
                tools:srcCompat="@drawable/empty_level_star" />
        </LinearLayout>

        <ImageView
            android:id="@+id/game_level_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/level_container"
            android:onClick="@{() -> viewModel.selectQuestion(question.id)}"
            android:shadowColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/level_container" />

        <TextView
            android:id="@+id/level_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/pontano_sans_bold"
            android:text="@{question.listId}"
            android:textColor="#675F1D"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/game_level_container"
            app:layout_constraintEnd_toEndOf="@+id/game_level_container"
            app:layout_constraintStart_toStartOf="@+id/game_level_container"
            app:layout_constraintTop_toTopOf="@+id/game_level_container"
            tools:text="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
