<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".LoginFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="123.18dp"
            android:layout_height="132.35dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/fan_cup_logo"
            android:src="@drawable/fan_cup_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:contentDescription="@string/login_screen_title"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="47dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="54.018dp"
                    android:layout_height="48dp"
                    android:background="@drawable/input_icon_background">

                    <ImageView
                        android:id="@+id/mail_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/email_or_username_icon"
                        android:src="@drawable/mail_03"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/login_username_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="username"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/email_username"
                    android:inputType="text"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textColor="#7C7C7C"
                    android:textColorHint="#595959" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="54.018dp"
                    android:layout_height="48dp"
                    android:background="@drawable/input_icon_background">

                    <ImageView
                        android:id="@+id/password_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/password_icon"
                        android:src="@drawable/ic_lock_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="password"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:textColor="#7C7C7C"
                    android:textColorHint="#595959" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_marginBottom="37dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#A99148"
                android:contentDescription="@string/login"
                android:elevation="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:shadowColor="#000000"
                android:shadowDy="4"
                android:shadowRadius="10"
                android:text="@string/login"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>