<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.ChampionFragment">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/one_vs_one_button"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_weight="1"
                android:backgroundTint="#4E9050"
                android:fontFamily="@font/poppins_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/_1v1"
                android:textSize="24sp"
                app:cornerRadius="9dp" />

            <Button
                android:id="@+id/with_friend_button"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#3E5E8E"
                android:fontFamily="@font/poppins_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/with_friend"
                android:textSize="24sp"
                app:cornerRadius="9dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/ranking"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/rank_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
